--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,8 @@
     "import matplotlib.pyplot as plt\n",
     "from pyspark.sql.functions import col, when, explode, split,\\\n",
     "    desc, from_unixtime, year\n",
-    "from pyspark.sql.types import DateType"
+    "from pyspark.sql.types import DateType\n",
+    "import time"
    ]
   },
   {
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,15 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/07/20 23:14:09 WARN Utils: Your hostname, cornichon resolves to a loopback address: 127.0.1.1; using 192.168.1.156 instead (on interface wlp3s0)\n",
-      "22/07/20 23:14:09 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/07/20 23:56:05 WARN Utils: Your hostname, cornichon resolves to a loopback address: 127.0.1.1; using 192.168.1.156 instead (on interface wlp3s0)\n",
+      "22/07/20 23:56:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       ":: loading settings :: url = jar:file:/home/matteo/anaconda3/envs/test_heva/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
      ]
     },
@@ -89,10 +90,10 @@
       "Ivy Default Cache set to: /home/matteo/.ivy2/cache\n",
       "The jars for the packages stored in: /home/matteo/.ivy2/jars\n",
       "org.xerial#sqlite-jdbc added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-c7581eb6-a2d2-4ade-83eb-664fe5409d97;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-a552233d-5dae-49f5-9fa6-a97eb5f088b6;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.xerial#sqlite-jdbc;3.34.0 in central\n",
-      ":: resolution report :: resolve 805ms :: artifacts dl 3ms\n",
+      ":: resolution report :: resolve 4006ms :: artifacts dl 58ms\n",
       "\t:: modules in use:\n",
       "\torg.xerial#sqlite-jdbc;3.34.0 from central in [default]\n",
       "\t---------------------------------------------------------------------\n",
@@ -101,16 +102,16 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   1   |   0   |   0   |   0   ||   1   |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-c7581eb6-a2d2-4ade-83eb-664fe5409d97\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-a552233d-5dae-49f5-9fa6-a97eb5f088b6\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 1 already retrieved (0kB/9ms)\n"
+      "\t0 artifacts copied, 1 already retrieved (0kB/104ms)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/07/20 23:14:12 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/07/20 23:56:23 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -427,20 +428,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ratings distribution\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 15:>                                                         (0 + 1) / 1]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Ratings distribution\n",
       "+------+------+\n",
       "|rating| count|\n",
       "+------+------+\n",
@@ -457,13 +445,6 @@
       "|    10|108351|\n",
       "+------+------+\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
@@ -508,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +643,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 30:>                                                         (0 + 4) / 4]\r"
+      "[Stage 30:=============================>                            (2 + 2) / 4]\r"
      ]
     },
     {
@@ -747,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -924,19 +905,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Code quality check"
+    "### 4. Data management\n",
+    "\n",
+    "- 4.1 In order to find the notes of a particular user more quickly, we want to set up an index on the user ids.\n",
+    "     Do you see a performance difference when looking up the ratings given by user `255`?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Spark DataFrames are inherently unordered and do not support random access. (There is no built-in index concept like there is in pandas). Each row is treated as an independent collection of structured data, and this is what enables distributed parallel processing. So any executor can take any block of data and process it regardless of row order. [More info here](https://stackoverflow.com/questions/52792762/is-there-a-way-to-slice-dataframe-based-on-index-in-pyspark)\n",
+    "\n",
+    "Instead we can order the pyspark ratings dataframe according to the 'user_id' column. Otherwise the koalas package can be an alternative. Because Koala supports indexes and can be used for big data. Also, pandas cannot be scaled for big data oriented use.\n",
+    "\n",
+    "To check performance, I created the function time_test which print the execution time of a function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_test(func):\n",
+    "    \"\"\" Check function time performance.\n",
+    "\n",
+    "    Args:\n",
+    "        func (function): A function name\n",
+    "    \"\"\"\n",
+    "    time_list = []\n",
+    "\n",
+    "    for i in range(100):\n",
+    "        start_time = time.time()\n",
+    "        # beginning of the code to test\n",
+    "        func()\n",
+    "        # end of the code to test\n",
+    "        time_list.append(time.time() - start_time)\n",
+    "\n",
+    "    mean_time = sum(time_list) / len(time_list)\n",
+    "    max_time = max(time_list)\n",
+    "    min_time = min(time_list)\n",
+    "\n",
+    "    print(\"min:\", min_time, \"mean:\", mean_time, \"max:\", max_time, end=\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result.ipynb#In[11]:22:18: W605 invalid escape sequence '\\|'\n"
+      "Converting Dataframe to Pandas...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time for unindexed PYSPARK dataframe\n",
+      "min: 0.004021167755126953 mean: 0.009643571376800537 max: 0.08949995040893555\n",
+      "\n",
+      "Execution time for PYSPARK dataframe indexed by 'user_id'\n",
+      "min: 0.0032854080200195312 mean: 0.008331408500671387 max: 0.028150081634521484\n",
+      "\n",
+      "Execution time for unindexed PANDAS dataframe\n",
+      "min: 0.0010211467742919922 mean: 0.003341825008392334 max: 0.1162865161895752\n",
+      "\n",
+      "Execution time for PANDAS dataframe indexed by 'user_id'\n",
+      "min: 5.698204040527344e-05 mean: 0.0007463288307189941 max: 0.06591582298278809\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def activity_4_1(df_ratings):\n",
+    "    \"\"\"Compare time perfomance for indexed and not indexed Dataframe\n",
+    "\n",
+    "    Args:\n",
+    "        df_ratings (Dataframe): Ratings Dataframe\n",
+    "    \"\"\"\n",
+    "    df_ratings_indexed = df_ratings.orderBy(\"user_id\")\n",
+    "\n",
+    "    print(\"Converting Dataframe to Pandas...\")\n",
+    "    pandas_df_ratings = df_ratings.toPandas()\n",
+    "    pandas_df_ratings_indexed = pandas_df_ratings.set_index(\"user_id\")\n",
+    "\n",
+    "    print(\"Execution time for unindexed PYSPARK dataframe\")\n",
+    "    time_test(lambda: df_ratings.filter(col(\"user_id\") == 255))\n",
+    "\n",
+    "    print(\"Execution time for PYSPARK dataframe indexed by 'user_id'\")\n",
+    "    time_test(lambda: df_ratings_indexed.filter(col(\"user_id\") == 255))\n",
+    "\n",
+    "    print(\"Execution time for unindexed PANDAS dataframe\")\n",
+    "    time_test(\n",
+    "        lambda: pandas_df_ratings\n",
+    "        .loc[pandas_df_ratings.loc[:, \"user_id\"] == 255])\n",
+    "\n",
+    "    print(\"Execution time for PANDAS dataframe indexed by 'user_id'\")\n",
+    "    time_test(lambda: pandas_df_ratings_indexed.loc[255])\n",
+    "\n",
+    "\n",
+    "activity_4_1(df_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ranking:\n",
+    "1. Indexed Pandas Dataframe\n",
+    "2. Unindexed Pandas Dataframe\n",
+    "3. Indexed Pyspark Dataframe / Unindexed Pyspark Dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code quality check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.ipynb#In[10]:22:18: W605 invalid escape sequence '\\|'\n",
+      "result.ipynb#In[ ]:1:80: E501 line too long (92 > 79 characters)\n"
      ]
     }
    ],
@@ -948,7 +1058,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Safe Notebook versioning"
+    "## Safe notebook versioning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook result.ipynb to python\n",
+      "[NbConvertApp] Writing 12924 bytes to result.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert result.ipynb --to=\"python\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PDF export"
    ]
   },
   {
@@ -960,13 +1095,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 10036 bytes to result.py\n"
+      "[NbConvertApp] Converting notebook result.ipynb to webpdf\n",
+      "[NbConvertApp] Building PDF\n",
+      "[NbConvertApp] PDF successfully created\n",
+      "[NbConvertApp] Writing 152121 bytes to result.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert result.ipynb --to=\"python\""
+    "!jupyter nbconvert --to webpdf --allow-chromium-download result.ipynb"
    ]
   }
  ],
