docs: Filling README. Completing requirements.

--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -78,8 +78,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/07/20 23:56:05 WARN Utils: Your hostname, cornichon resolves to a loopback address: 127.0.1.1; using 192.168.1.156 instead (on interface wlp3s0)\n",
-      "22/07/20 23:56:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/07/21 17:54:37 WARN Utils: Your hostname, cornichon resolves to a loopback address: 127.0.1.1; using 192.168.1.156 instead (on interface wlp3s0)\n",
+      "22/07/21 17:54:37 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       ":: loading settings :: url = jar:file:/home/matteo/anaconda3/envs/test_heva/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
      ]
     },
@@ -90,10 +90,10 @@
       "Ivy Default Cache set to: /home/matteo/.ivy2/cache\n",
       "The jars for the packages stored in: /home/matteo/.ivy2/jars\n",
       "org.xerial#sqlite-jdbc added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-a552233d-5dae-49f5-9fa6-a97eb5f088b6;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-d1cc521a-27f9-416c-bb07-82e3cc90c4a1;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.xerial#sqlite-jdbc;3.34.0 in central\n",
-      ":: resolution report :: resolve 4006ms :: artifacts dl 58ms\n",
+      ":: resolution report :: resolve 301ms :: artifacts dl 8ms\n",
       "\t:: modules in use:\n",
       "\torg.xerial#sqlite-jdbc;3.34.0 from central in [default]\n",
       "\t---------------------------------------------------------------------\n",
@@ -102,16 +102,16 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   1   |   0   |   0   |   0   ||   1   |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-a552233d-5dae-49f5-9fa6-a97eb5f088b6\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-d1cc521a-27f9-416c-bb07-82e3cc90c4a1\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 1 already retrieved (0kB/104ms)\n"
+      "\t0 artifacts copied, 1 already retrieved (0kB/7ms)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/07/20 23:56:23 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/07/21 17:54:39 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -428,7 +428,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ratings distribution\n",
+      "Ratings distribution\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 15:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "+------+------+\n",
       "|rating| count|\n",
       "+------+------+\n",
@@ -445,6 +458,13 @@
       "|    10|108351|\n",
       "+------+------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -643,7 +663,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 30:=============================>                            (2 + 2) / 4]\r"
+      "[Stage 30:==============>                                           (1 + 3) / 4]\r"
      ]
     },
     {
@@ -974,16 +994,16 @@
      "output_type": "stream",
      "text": [
       "Execution time for unindexed PYSPARK dataframe\n",
-      "min: 0.004021167755126953 mean: 0.009643571376800537 max: 0.08949995040893555\n",
+      "min: 0.004551887512207031 mean: 0.013537328243255615 max: 0.062064170837402344\n",
       "\n",
       "Execution time for PYSPARK dataframe indexed by 'user_id'\n",
-      "min: 0.0032854080200195312 mean: 0.008331408500671387 max: 0.028150081634521484\n",
+      "min: 0.003513336181640625 mean: 0.009300875663757324 max: 0.030205965042114258\n",
       "\n",
       "Execution time for unindexed PANDAS dataframe\n",
-      "min: 0.0010211467742919922 mean: 0.003341825008392334 max: 0.1162865161895752\n",
+      "min: 0.0008656978607177734 mean: 0.0017917799949645997 max: 0.02407217025756836\n",
       "\n",
       "Execution time for PANDAS dataframe indexed by 'user_id'\n",
-      "min: 5.698204040527344e-05 mean: 0.0007463288307189941 max: 0.06591582298278809\n",
+      "min: 5.7220458984375e-05 mean: 0.0004215097427368164 max: 0.033597469329833984\n",
       "\n"
      ]
     }
@@ -1098,7 +1118,7 @@
       "[NbConvertApp] Converting notebook result.ipynb to webpdf\n",
       "[NbConvertApp] Building PDF\n",
       "[NbConvertApp] PDF successfully created\n",
-      "[NbConvertApp] Writing 152121 bytes to result.pdf\n"
+      "[NbConvertApp] Writing 152158 bytes to result.pdf\n"
      ]
     }
    ],
