feat: Adding logger

--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -42,7 +42,9 @@
     "from pyspark.sql.functions import col, when, explode, split,\\\n",
     "    desc, from_unixtime, year\n",
     "from pyspark.sql.types import DateType\n",
-    "import time"
+    "import time\n",
+    "import sys\n",
+    "import contextlib"
    ]
   },
   {
@@ -59,7 +61,29 @@
    "outputs": [],
    "source": [
     "# Definition of necessary parameters\n",
-    "data_path = \"../sources/data/movies.sqlite\""
+    "data_path = \"../sources/data/movies.sqlite\"\n",
+    "output_log_path = \"result.log\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Logger:\n",
+    "\n",
+    "    def __init__(self, filename):\n",
+    "        self.console = sys.stdout\n",
+    "        self.file = open(filename, 'a')\n",
+    "\n",
+    "    def write(self, message):\n",
+    "        self.console.write(message)\n",
+    "        self.file.write(message)\n",
+    "\n",
+    "    def flush(self):\n",
+    "        self.console.flush()\n",
+    "        self.file.flush()"
    ]
   },
   {
@@ -71,15 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/07/21 17:54:37 WARN Utils: Your hostname, cornichon resolves to a loopback address: 127.0.1.1; using 192.168.1.156 instead (on interface wlp3s0)\n",
-      "22/07/21 17:54:37 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/07/21 20:51:21 WARN Utils: Your hostname, cornichon resolves to a loopback address: 127.0.1.1; using 192.168.1.156 instead (on interface wlp3s0)\n",
+      "22/07/21 20:51:21 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       ":: loading settings :: url = jar:file:/home/matteo/anaconda3/envs/test_heva/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
      ]
     },
@@ -90,10 +114,10 @@
       "Ivy Default Cache set to: /home/matteo/.ivy2/cache\n",
       "The jars for the packages stored in: /home/matteo/.ivy2/jars\n",
       "org.xerial#sqlite-jdbc added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-d1cc521a-27f9-416c-bb07-82e3cc90c4a1;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-b83cb341-a934-43d0-bac7-7b64070cb6ad;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.xerial#sqlite-jdbc;3.34.0 in central\n",
-      ":: resolution report :: resolve 301ms :: artifacts dl 8ms\n",
+      ":: resolution report :: resolve 317ms :: artifacts dl 6ms\n",
       "\t:: modules in use:\n",
       "\torg.xerial#sqlite-jdbc;3.34.0 from central in [default]\n",
       "\t---------------------------------------------------------------------\n",
@@ -102,16 +126,16 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   1   |   0   |   0   |   0   ||   1   |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-d1cc521a-27f9-416c-bb07-82e3cc90c4a1\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-b83cb341-a934-43d0-bac7-7b64070cb6ad\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 1 already retrieved (0kB/7ms)\n"
+      "\t0 artifacts copied, 1 already retrieved (0kB/6ms)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/07/21 17:54:39 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/07/21 20:51:23 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -161,7 +185,8 @@
     "    return df_movies, df_ratings\n",
     "\n",
     "\n",
-    "df_movies, df_ratings = read_data(data_path)"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    df_movies, df_ratings = read_data(data_path)"
    ]
   },
   {
@@ -173,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +293,8 @@
     "    df_ratings.show()\n",
     "\n",
     "\n",
-    "preview_data(df_movies, df_ratings)"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    preview_data(df_movies, df_ratings)"
    ]
   },
   {
@@ -284,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -326,8 +352,9 @@
     "        .count()\n",
     "\n",
     "\n",
-    "result_1_1 = activity_1_1(df_movies)\n",
-    "print(\"There are\", result_1_1, \"movies in the database\")"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    result_1_1 = activity_1_1(df_movies)\n",
+    "    print(\"There are\", result_1_1, \"movies in the database\")"
    ]
   },
   {
@@ -339,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -381,8 +408,9 @@
     "        .count()\n",
     "\n",
     "\n",
-    "result_1_2 = activity_1_2(df_ratings)\n",
-    "print(\"There are\", result_1_2, \"user id in the database\")"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    result_1_2 = activity_1_2(df_ratings)\n",
+    "    print(\"There are\", result_1_2, \"user id in the database\")"
    ]
   },
   {
@@ -395,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -428,20 +456,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ratings distribution\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 15:>                                                         (0 + 1) / 1]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Ratings distribution\n",
       "+------+------+\n",
       "|rating| count|\n",
       "+------+------+\n",
@@ -458,13 +473,6 @@
       "|    10|108351|\n",
       "+------+------+\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
@@ -497,7 +505,8 @@
     "        .show()\n",
     "\n",
     "\n",
-    "activity_1_3(df_ratings)"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    activity_1_3(df_ratings)"
    ]
   },
   {
@@ -509,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -559,8 +568,9 @@
     "        .show()\n",
     "\n",
     "\n",
-    "print(\"Ratings frequencies\")\n",
-    "activity_1_4(df_ratings)"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    print(\"Ratings frequencies\")\n",
+    "    activity_1_4(df_ratings)"
    ]
   },
   {
@@ -575,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -636,8 +646,9 @@
     "    return df_ratings\n",
     "\n",
     "\n",
-    "print(\"Updated ratings Dataframe\")\n",
-    "df_ratings = activity_2_1(df_ratings)"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    print(\"Updated ratings Dataframe\")\n",
+    "    df_ratings = activity_2_1(df_ratings)"
    ]
   },
   {
@@ -649,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +674,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 30:==============>                                           (1 + 3) / 4]\r"
+      "[Stage 30:>                                                         (0 + 4) / 4]\r"
      ]
     },
     {
@@ -732,8 +743,9 @@
     "        .show()\n",
     "\n",
     "\n",
-    "print(\"Top 10 genres\")\n",
-    "activity_2_2(df_movies, df_ratings)"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    print(\"Top 10 genres\")\n",
+    "    activity_2_2(df_movies, df_ratings)"
    ]
   },
   {
@@ -748,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +774,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 48:>                                                         (0 + 4) / 4]\r"
+      "                                                                                \r"
      ]
     },
     {
@@ -833,8 +845,9 @@
     "        .show()\n",
     "\n",
     "\n",
-    "print(\"Top 10 movies\")\n",
-    "activity_3_1(df_movies, df_ratings)"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    print(\"Top 10 movies\")\n",
+    "    activity_3_1(df_movies, df_ratings)"
    ]
   },
   {
@@ -847,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -917,8 +930,9 @@
     "        .show()\n",
     "\n",
     "\n",
-    "print(\"Best film of the year 2020\")\n",
-    "activity_3_2(df_movies, df_ratings)"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    print(\"Best film of the year 2020\")\n",
+    "    activity_3_2(df_movies, df_ratings)"
    ]
   },
   {
@@ -944,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -994,16 +1008,16 @@
      "output_type": "stream",
      "text": [
       "Execution time for unindexed PYSPARK dataframe\n",
-      "min: 0.004551887512207031 mean: 0.013537328243255615 max: 0.062064170837402344\n",
+      "min: 0.0039598941802978516 mean: 0.008981218338012695 max: 0.02070164680480957\n",
       "\n",
       "Execution time for PYSPARK dataframe indexed by 'user_id'\n",
-      "min: 0.003513336181640625 mean: 0.009300875663757324 max: 0.030205965042114258\n",
+      "min: 0.003888368606567383 mean: 0.009223527908325195 max: 0.0683746337890625\n",
       "\n",
       "Execution time for unindexed PANDAS dataframe\n",
-      "min: 0.0008656978607177734 mean: 0.0017917799949645997 max: 0.02407217025756836\n",
+      "min: 0.001016855239868164 mean: 0.00222933292388916 max: 0.021737098693847656\n",
       "\n",
       "Execution time for PANDAS dataframe indexed by 'user_id'\n",
-      "min: 5.7220458984375e-05 mean: 0.0004215097427368164 max: 0.033597469329833984\n",
+      "min: 5.841255187988281e-05 mean: 0.0004265451431274414 max: 0.03124547004699707\n",
       "\n"
      ]
     }
@@ -1036,7 +1050,8 @@
     "    time_test(lambda: pandas_df_ratings_indexed.loc[255])\n",
     "\n",
     "\n",
-    "activity_4_1(df_ratings)"
+    "with contextlib.redirect_stdout(Logger(output_log_path)):\n",
+    "    activity_4_1(df_ratings)"
    ]
   },
   {
@@ -1058,14 +1073,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result.ipynb#In[10]:22:18: W605 invalid escape sequence '\\|'\n",
+      "result.ipynb#In[11]:22:18: W605 invalid escape sequence '\\|'\n",
       "result.ipynb#In[ ]:1:80: E501 line too long (92 > 79 characters)\n"
      ]
     }
@@ -1083,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1106,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 12924 bytes to result.py\n"
+      "[NbConvertApp] Writing 14008 bytes to result.py\n"
      ]
     }
    ],
@@ -1108,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1133,7 @@
       "[NbConvertApp] Converting notebook result.ipynb to webpdf\n",
       "[NbConvertApp] Building PDF\n",
       "[NbConvertApp] PDF successfully created\n",
-      "[NbConvertApp] Writing 152158 bytes to result.pdf\n"
+      "[NbConvertApp] Writing 154845 bytes to result.pdf\n"
      ]
     }
    ],
